*updated the built html player.

--- a/builds/play.html
+++ b/builds/play.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--
 BASIC8 Player
-Copyright (C) 2017 - 2019 Wang Renxin
+Copyright (C) 2018 - 2020 Tony Wang
 Learn more: https://paladin-t.github.io/b8/
 Get BASIC8: https://store.steampowered.com/app/767240/
 -->
@@ -75,7 +75,7 @@ Get BASIC8: https://store.steampowered.com/app/767240/
 			<div id="controls" style="display: none;">
 				<p align="center"><input id="fullscreen" type="button" class="button" value="Fullscreen" onclick="Module.requestFullscreen(false);" /></p>
 			</div>
-			<p align="center">Powered by <a href="https://paladin-t.github.io/b8/">BASIC8</a>, disk player build (23)</p>
+			<p align="center">Powered by <a href="https://paladin-t.github.io/b8/">BASIC8</a>, disk player build (24)</p>
 		</div>
 		<script type="text/javascript">
 			// Initializes the module.
